@@ -7,7 +7,6 @@ import static org.junit.jupiter.api.Assertions.fail;
 import java.util.LinkedHashMap;
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.type.TypeMirror;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.seasar.doma.internal.apt.AptException;
 import org.seasar.doma.internal.apt.CompilerSupport;
@@ -17,16 +16,6 @@ import org.seasar.doma.jdbc.SqlNode;
 import org.seasar.doma.message.Message;
 
 class BatchSqlValidatorTest extends CompilerSupport {
-
-  @BeforeEach
-  void beforeEach() {
-    addSourcePath("src/main/java");
-    addOption(
-        "--add-modules",
-        "org.seasar.doma.mock",
-        "--add-reads",
-        "org.seasar.doma.processor=org.seasar.doma.mock");
-  }
 
   @Test
   void testEmbeddedVariable() throws Exception {
@@ -75,7 +64,7 @@ class BatchSqlValidatorTest extends CompilerSupport {
         });
     compile();
     assertTrue(getCompiledResult());
-    assertNoMessage();
+    assertNoError();
   }
 
   @Test
@@ -125,7 +114,7 @@ class BatchSqlValidatorTest extends CompilerSupport {
         });
     compile();
     assertTrue(getCompiledResult());
-    assertNoMessage();
+    assertNoError();
   }
 
   @Test
@@ -152,7 +141,9 @@ class BatchSqlValidatorTest extends CompilerSupport {
         });
     compile();
     assertTrue(getCompiledResult());
-    assertEquals(2, getDiagnostics().size());
+    assertMessage(Message.DOMA4181);
+    assertMessage(Message.DOMA4182);
+    assertNoError();
   }
 
   @Test
@@ -179,7 +170,7 @@ class BatchSqlValidatorTest extends CompilerSupport {
         });
     compile();
     assertTrue(getCompiledResult());
-    assertNoMessage();
+    assertNoError();
   }
 
   @Test
@@ -204,7 +195,7 @@ class BatchSqlValidatorTest extends CompilerSupport {
         });
     compile();
     assertTrue(getCompiledResult());
-    assertNoMessage();
+    assertNoError();
   }
 
   @Test
